$Id: ChangeLog,v 1.156 2005/06/18 21:15:38 bkc_alpha Exp $

2005-06-19 BouKiCHi
    * Splited MAPXYC routine from GRPPRT routine
    * Fixed MAPXYC's position Y is rounded down
      TODO : investigate more detail
    * Implemented FETCHC
    * Implemented dummy BASIC statements
    * Improved BREAKX returns value
    * Changed around $0d02 to actual instructions(not jump)

2005-06-18 Albert Beevendorp
    * adjusted blueMSX configs to include the logo rom
    * adjusted NLMSX configs to include the logo rom

2005-06-18 BouKiCHi
    * Removed extrom's debug print for address check.

2005-06-16 Albert Beevendorp
    * seperated logo.asm from main.asm
      - added 3 logo compilation sources like main has
      - hardcoded BIOS entries in logo.asm as they're not
        accessible using names anymore
      - adjusted openMSX configs to include the logo rom
      - adjusted make.bat and Makefile to compile the logo
        TODO: review and test Makefile
      - adjusted structure.bat to copy the logo roms to the
        correct paths as well
      - the default screen when the logo isn't found could
        be better

2005-06-16 BouKiCHi
    * Added recognize function key in keychk
    * Changed OUTDO calls H_OUTD.
    * Added updating sprite attribute table to SETPAG.

2005-06-15 BouKiCHi
    * Improved GRPPRT changes attribute correctly.
    * Fixed PUTQ and LFTQ's address calculation.
    * Added jump instruction before H_TIMI.
    * Added haywire to GTPAD(doesn't return without $00 now).
    * Added locale condition define and Japanese localized font

2005-06-13 BouKiCHi
    * Changed LDIRMV to save HL.
    * Changed GRPPRT's output position to be correctly.

2005-06-12 BouKiCHi
    * Changed GTSTCK to use DE register
    * Implimented GRPPRT on SCREEN 2

2005-06-10 BouKiCHi
    * Changed GTSTCK returns DE = 0
    * Changed CHSNS returns EI and A = 0 if ZF = 1
    * Changed build.bat to display processing file when using pasmo

2005-06-09 BouKiCHi